<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ui.calendar.CalendarFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/set_input_layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_event_location" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/set_input_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_event_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/new_event_dateview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            android:autofillHints="@string/date"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/calendar"
            android:paddingEnd="30dp"
            android:src="@drawable/ic_baseline_date_range_24" />

        <EditText
            android:id="@+id/new_event_timeview"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/clock"
            android:inputType="time"
            android:autofillHints="@string/clock"/>

        <ImageButton
            android:id="@+id/show_timepicker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/clock"
            android:paddingEnd="30dp"
            android:src="@drawable/ic_baseline_access_time_24" />
    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor"
        android:text="@string/save"
        android:textColor="@color/primaryTextColor" />
</LinearLayout>
