<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.DeleteUserFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/layoutHead"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <ImageView
                android:id="@+id/image_view"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/set_text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:enabled="true"
                android:text="@string/deleteUser"
                android:textAlignment="center"
                android:textColor="@color/danger"
                android:textSize="20sp" />
        </RelativeLayout>
        <LinearLayout
            android:animateLayoutChanges="true"
            android:id="@+id/layoutPassword"
            android:padding="16dp"
            android:visibility="invisible"
            android:layout_below="@id/layoutHead"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/writePassword"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:singleLine="true" />

            <Button
                android:id="@+id/button_authenticate"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/danger"
                android:text="@string/autenticate"
                android:textAllCaps="false"
                android:textColor="@color/primaryTextColor" />
        </LinearLayout>
        <LinearLayout
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="visible"
            android:id="@+id/layoutUpdateEmail"
            android:padding="16dp"
            android:layout_below="@id/layoutHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:enabled="true"
                android:text="Er du helt sikker på at du vil slette brukeren?"
                android:textColor="@color/danger"
                android:textSize="20dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_delete_user"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/danger"
                android:text="@string/deleteUser"
                android:textAllCaps="false"
                android:textColor="@color/primaryTextColor" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>